1.7.0d (Bootstrap) ++ overflows in Simbad-ID results fixed (now scrollable) ++ search form centered with absolute position+top+left ++ responsive paddings set for Simbad-ID results

--- a/astrosearcher/src/main/resources/static/css/main.css
+++ b/astrosearcher/src/main/resources/static/css/main.css
@@ -26,8 +26,12 @@ header {
     padding-bottom: 0;
 }
 
+.table-cells-pe-2 > tbody > tr > td {
+    padding-right: 0.5rem;
+}
+
 .table-cells-pe-3 > tbody > tr > td {
-    padding-right: 1.0rem;
+    padding-right: 1rem;
 }
 
 .flex-basis-25 > * {
